문제없이 실행되는 것 확인

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div>
       <h2>게시판</h2>
       <ul id="board">
-      <li><a href="2024-05-27-19-59-2.html">2024-05-27-19-59-2</a></li><li><a href="2024-05-27-19-59-7.html">2024-05-27-19-59-7</a></li>
+      <li><a href="2024-05-27-20-3-27.html">2024-05-27-20-3-27</a></li>
       </ul>
     </div>
     <script src="./script.js"></script>
