--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이것은블로그입니다.</title>
+    <link rel="icon" href="./img/icons8-bear-full-body-16.png">
   </head>
   <body>
     <form action="/create" method="POST" id="form">
@@ -16,7 +17,7 @@
     <div>
       <h2>게시판</h2>
       <ul id="board">
-      <li><a href="2024-05-27-20-3-27.html">2024-05-27-20-3-27</a></li>
+      <li><a href="2024-05-27-20-41-55.html">2024-05-27-20-41-55</a></li><li><a href="2024-05-27-20-42-2.html">2024-05-27-20-42-2</a></li>
       </ul>
     </div>
     <script src="./script.js"></script>
