생성된 파일 및 html의 ul태그를 비운다.

--- a/public/writeFile/2024-05-28-15-25-19.html
+++ b/public/writeFile/2024-05-28-15-25-19.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>가나다</title>
+    <title>xvs</title>
   </head>
   <body>
-    <h1>가나다</h1>
-    <h3>마바사</h3>
+    <h1>xvs</h1>
+    <h3>bfber</h3>
     <a href="../index.html">홈으로 돌아가기</a>
   </body>
 </html>
