--- a/public/writeFile/2024-05-28-15-26-00.html
+++ b/public/writeFile/2024-05-28-15-26-00.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>커즈</title>
+    <title>cb</title>
   </head>
   <body>
-    <h1>커즈</h1>
-    <h3>아 돈 워너</h3>
+    <h1>cb</h1>
+    <h3>bvdf</h3>
     <a href="../index.html">홈으로 돌아가기</a>
   </body>
 </html>
