--- a/public/writeFile/2024-05-28-15-25-24.html
+++ b/public/writeFile/2024-05-28-15-25-24.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자니?</title>
+    <title>qegwb</title>
   </head>
   <body>
-    <h1>자니?</h1>
-    <h3>자는구나?</h3>
+    <h1>qegwb</h1>
+    <h3>v bzxvb</h3>
     <a href="../index.html">홈으로 돌아가기</a>
   </body>
 </html>
