--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <div>
       <h2>게시판</h2>
       <ul id="board">
+      <li><a href="2024-05-29-15-33-10.html">2024-05-29-15-33-10</a></li>
       </ul>
     </div>
     <script src="./script.js"></script>
