--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <button id="send" type="submit">글쓰기</button>
     </form>
     <div>
-      <h2>게시판</h2>
+      <h2>패치노트</h2>
       <ul id="board">
       <li><a href="2024-05-29-15-33-10.html">2024-05-29-15-33-10</a></li>
       </ul>
