html파일 수정및 script파일 생성

--- a/public/writeFile/2024-05-29-15-33-10.html
+++ b/public/writeFile/2024-05-29-15-33-10.html
@@ -1,17 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>패치노트</title>
+    <title>${title}</title>
   </head>
   <body>
     <h1>패치노트</h1>
     <h3>글 삭제기능을 기획중입니다.</h3>
     <a href="../index.html">홈으로 돌아가기</a>
-    <form action="/delete" method="POST">
+    <form action="/modify" method="POST" style="display: inline">
+      <button type="submit">수정</button>
+    </form>
+    <form action="/delete" method="POST" style="display: inline">
       <button type="submit">삭제</button>
     </form>
   </body>
 </html>
+
