--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       <h2>패치노트</h2>
       <ul id="board">
       </ul>
+      <form action="/writeField" method="POST">
+        <button type="submit">글쓰기</button>
+      </form>
     </div>
     <script src="./script.js"></script>
   </body>
